Remove Useless ipynb

--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Gyro Detection"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# 1. 데이터 수집"
    ]
   },
