--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -18,7 +18,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 학습에 사용할 데이터를 수집합니다. 원하는 데이터의 filename을 설정하고 gathering_motion 메서드를 실행합니다."
+    "## 학습에 사용할 데이터를 수집합니다. 수집하고자 하는 데이터의 이름을 설정하고 gathering_motion 메서드를 통해 데이터를 수집합니다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1-1. gathering_data 모듈과 Pymodi 패키지를 import합니다."
    ]
   },
   {
@@ -32,6 +39,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1-2. 모디 객체와 DataGathering 클래스 객체를 생성합니다."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -42,6 +56,13 @@
     "btn = bundle.buttons[0]\n",
     "\n",
     "dg = DataGathering()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1-3. 파일 이름을 입력하고, gathering_motion 메서드를 실행하여 데이터를 수집합니다."
    ]
   },
   {
@@ -62,6 +83,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 수집한 데이터를 통해 학습 모델을 생성합니다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2-1. gesture_detection 모듈을 import 합니다."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -71,12 +106,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2-2. DetectGesture 클래스 객체를 생성합니다."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "dg = DetectGesture()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2-3. 모델 이름을 입력하고 training_model 메서드를 통해 학습 및 모델을 생성합니다."
    ]
   },
   {
@@ -93,7 +142,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3. 학습된 모델을 활용하여 컨텐츠 제작"
+    "# 3. 학습된 모델을 활용하여 콘텐츠 제작"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 생성된 모델을 활용하여 콘텐츠를 제작합니다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3-1. gesture_detection 모듈과 Pymodi 및 필수 패키지들을 import 합니다."
    ]
   },
   {
@@ -109,6 +172,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3-2. 모디 객체와 DetectGesture 클래스 객체를 생성합니다."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -119,6 +189,13 @@
     "btn = bundle.buttons[0]\n",
     "mot = bundle.motors[0]\n",
     "dg = DetectGesture()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3-3. 반복문 안에 있는 사용자 코드 영역을 수정하여 모터 모듈이 움직이도록 코드를 움직이도록 코드를 작성합니다."
    ]
   },
   {
@@ -138,7 +215,7 @@
     "            while True:\n",
     "                print(\"버튼을 눌러 데이터를 수집해보세요. 멈추려면 버튼을 더블클릭하세요.\", end='\\r')\n",
     "                if btn.get_clicked():\n",
-    "                    pred = dg.predict(gyro, btn)\n",
+    "                    pred = dg.predict(gyro, btn) #pred 변수에, 예측값을 받아와 저장합니다.\n",
     "                    time.sleep(0.1)\n",
     "                    # 사용자 코드 영역\n",
     "                    # =======================================================\n",
@@ -194,7 +271,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
