update pymodi to 0.8.0

--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -208,41 +208,39 @@
     "        time.sleep(0.1)\n",
     "        print(\"버튼을 더블클릭하면 출발합니다\")\n",
     "        clear_output(wait=True)\n",
-    "        if btn.get_double_clicked():\n",
+    "        if btn.double_clicked:\n",
     "            print(\"출발!\")\n",
-    "            mot.set_speed(25, -25)\n",
+    "            mot.speed = 25, -25\n",
     "            time.sleep(0.1)\n",
     "            while True:\n",
     "                print(\"버튼을 눌러 데이터를 수집해보세요. 멈추려면 버튼을 더블클릭하세요.\", end='\\r')\n",
-    "                if btn.get_clicked():\n",
+    "                if btn.clicked:\n",
     "                    pred = dg.predict(gyro, btn) #pred 변수에, 예측값을 받아와 저장합니다.\n",
     "                    time.sleep(0.1)\n",
     "                    # 사용자 코드 영역\n",
     "                    # =======================================================\n",
     "                    if pred == 'back':\n",
-    "                        mot.set_speed(-23,23)\n",
+    "                        mot.speed = -23,23\n",
     "                        time.sleep(0.1)\n",
     "                        print('car : back!')\n",
     "                    elif pred == 'go':\n",
-    "                        mot.set_speed(23, -23)\n",
+    "                        mot.speed = 23, -23\n",
     "                        time.sleep(0.1)\n",
     "                        print('car : go!')\n",
     "                    elif pred == 'left':\n",
-    "                        mot.set_speed(23, 23)\n",
+    "                        mot.speed = 23, 23\n",
     "                        time.sleep(0.1)\n",
     "                        print('car : left!')\n",
     "                    elif pred == 'right':\n",
-    "                        mot.set_speed(-23, -23)\n",
+    "                        mot.speed = -23, -23\n",
     "                        time.sleep(0.1)\n",
     "                        print('car : right!')\n",
-    "\n",
     "                    #=======================================================\n",
     "\n",
-    "\n",
     "                time.sleep(0.1)\n",
-    "                if btn.get_double_clicked():\n",
+    "                if btn.double_clicked:\n",
     "                    print(\"stop!\")\n",
-    "                    mot.set_speed(0, 0)\n",
+    "                    mot.speed = 0, 0\n",
     "                    time.sleep(0.1)\n",
     "                    break"
    ]
