Hide model name

--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -134,8 +134,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "modelname = 'model1' # 모델 파일은 /model/model1.h5 로 저장됩니다.\n",
-    "dg.training_model(modelname)"
+    "dg.training_model()"
    ]
   },
   {
