Add Scaler Preprocessing for enhancement model Accuracy

--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -30,17 +30,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Running PyMODI (v0.9.1)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from gathering_data import DataGathering\n",
     "import modi"
@@ -55,27 +47,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Run Ser Task.\n",
-      "Start initializing connected MODI modules\n",
-      "current json message: \"s\":1771,\"d\":0,\"b\":\"6wZHkhBAAQ==\",\"l\":7}\n",
-      "Button (1431) has been connected!\n",
-      "Gyro (1742) has been connected!\n",
-      "Start updating the binary firmware for motor (1771)\n",
-      "Updating: [==================================================>] 100% \n",
-      "Firmware update is done for motor (1771)\n",
-      "Reboot message has been sent to all connected modules\n",
-      "Resetting firmware updater's state\n",
-      "Motor (1771) has been connected!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "bundle = modi.MODI()\n",
     "gyro = bundle.gyros[0]\n",
@@ -93,32 +67,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "데이터 수집을 종료합니다.\n",
-      "current json message: ,\"d\":11,\"b\":\"AGAOvwAAAAA=\",\"l\":8}\n",
-      "current json message: 4,\"b\":\"wNXcQQAAAAA=\",\"l\":8}\n",
-      "current json message: ,\"d\":11,\"b\":\"q+rhvQAAAAA=\",\"l\":8}\n",
-      "current json message: ,\"d\":11,\"b\":\"q0oSvgAAAAA=\",\"l\":8}\n",
-      "current json message: ,\"d\":11,\"b\":\"VdVJvQAAAAA=\",\"l\":8}\n",
-      "current json message: ,\"d\":11,\"b\":\"AADuPAAAAAA=\",\"l\":8}\n",
-      "current json message: ,\"d\":11,\"b\":\"VVVRPAAAAAA=\",\"l\":8}\n",
-      "current json message: ,\"d\":11,\"b\":\"q8qCvgAAAAA=\",\"l\":8}\n",
-      "current json message: ,\"d\":11,\"b\":\"ABCbvgAAAAA=\",\"l\":8}\n",
-      "current json message: ,\"d\":11,\"b\":\"AIC8vQAAAAA=\",\"l\":8}\n",
-      "current json message: ,\"d\":11,\"b\":\"VTWAvgAAAAA=\",\"l\":8}\n",
-      "current json message: ,\"d\":11,\"b\":\"q7r6vgAAAAA=\",\"l\":8}\n",
-      "current json message: :7,\"b\":\"AIAivwAAAAA=\",\"l\":8}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "filename = 'new' # 파일은 /data/go.csv 에 저장됩니다.\n",
+    "filename = 'left' # 파일은 /data/go.csv 에 저장됩니다.\n",
     "dg.gathering_motion(btn, gyro, filename)"
    ]
   },
@@ -223,9 +176,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running PyMODI (v0.9.1)\n"
+     ]
+    }
+   ],
    "source": [
     "from gesture_detection import DetectGesture\n",
     "from IPython.display import clear_output\n",
@@ -242,9 +203,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Run Ser Task.\n",
+      "Start initializing connected MODI modules\n",
+      "Button (1431) has been connected!\n",
+      "Gyro (1742) has been connected!\n",
+      "Motor (1771) has been connected!\n"
+     ]
+    }
+   ],
    "source": [
     "bundle = modi.MODI()\n",
     "gyro = bundle.gyros[0]\n",
@@ -264,7 +237,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "버튼을 더블클릭하면 출발합니다\n"
+     ]
+    }
+   ],
    "source": [
     "while True:\n",
     "        time.sleep(0.1)\n",
