Raise motor speed

--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -216,6 +216,68 @@
       "Gyro (1742) has been connected!\n",
       "Motor (1771) has been connected!\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception in thread Thread-4:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/peter/opt/anaconda3/lib/python3.7/threading.py\", line 926, in _bootstrap_inner\n",
+      "    self.run()\n",
+      "  File \"/Users/peter/opt/anaconda3/lib/python3.7/threading.py\", line 870, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"/Users/peter/opt/anaconda3/lib/python3.7/site-packages/modi/task/ser_task.py\", line 130, in run_recv_data\n",
+      "    self._recv_data()\n",
+      "  File \"/Users/peter/opt/anaconda3/lib/python3.7/site-packages/modi/task/ser_task.py\", line 97, in _recv_data\n",
+      "    serial_buffer = self.__ser.in_waiting\n",
+      "  File \"/Users/peter/.local/lib/python3.7/site-packages/serial/serialposix.py\", line 467, in in_waiting\n",
+      "    s = fcntl.ioctl(self.fd, TIOCINQ, TIOCM_zero_str)\n",
+      "OSError: [Errno 6] Device not configured\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "MODI connection is lost!!!"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/peter/.local/lib/python3.7/site-packages/serial/serialposix.py\", line 537, in write\n",
+      "    n = os.write(self.fd, d)\n",
+      "OSError: [Errno 6] Device not configured\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/peter/opt/anaconda3/lib/python3.7/site-packages/modi/task/ser_task.py\", line 146, in run_send_data\n",
+      "    self._send_data()\n",
+      "  File \"/Users/peter/opt/anaconda3/lib/python3.7/site-packages/modi/task/ser_task.py\", line 117, in _send_data\n",
+      "    self.__ser.write(message_to_send)\n",
+      "  File \"/Users/peter/.local/lib/python3.7/site-packages/serial/serialposix.py\", line 571, in write\n",
+      "    raise SerialException('write failed: {}'.format(e))\n",
+      "serial.serialutil.SerialException: write failed: [Errno 6] Device not configured\n"
+     ]
     }
    ],
    "source": [
@@ -253,7 +315,7 @@
     "        clear_output(wait=True)\n",
     "        if btn.double_clicked:\n",
     "            print(\"출발!\")\n",
-    "            mot.speed = 25, -25\n",
+    "            mot.speed = 35, -35\n",
     "            time.sleep(0.1)\n",
     "            while True:\n",
     "                print(\"버튼을 눌러 데이터를 수집해보세요. 멈추려면 버튼을 더블클릭하세요.\", end='\\r')\n",
@@ -263,19 +325,19 @@
     "                    # 사용자 코드 영역\n",
     "                    # =======================================================\n",
     "                    if pred == 'back':\n",
-    "                        mot.speed = -23,23\n",
+    "                        mot.speed = -30,30\n",
     "                        time.sleep(0.1)\n",
     "                        print('car : back!')\n",
     "                    elif pred == 'go':\n",
-    "                        mot.speed = 23, -23\n",
+    "                        mot.speed = 30, -30\n",
     "                        time.sleep(0.1)\n",
     "                        print('car : go!')\n",
     "                    elif pred == 'left':\n",
-    "                        mot.speed = 23, 23\n",
+    "                        mot.speed = 30, 30\n",
     "                        time.sleep(0.1)\n",
     "                        print('car : left!')\n",
     "                    elif pred == 'right':\n",
-    "                        mot.speed = -23, -23\n",
+    "                        mot.speed = -30, -30\n",
     "                        time.sleep(0.1)\n",
     "                        print('car : right!')\n",
     "                    #=======================================================\n",
