--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -114,9 +114,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running PyMODI (v0.9.2)\n"
+     ]
+    }
+   ],
    "source": [
     "from gesture_detection import DetectGesture"
    ]
@@ -130,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,9 +154,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[학습 시작]\n",
+      "학습을 시작합니다.\n",
+      "WARNING:tensorflow:From /home/pi/.local/lib/python3.7/site-packages/tensorflow_core/python/ops/resource_variable_ops.py:1630: calling BaseResourceVariable.__init__ (from tensorflow.python.ops.resource_variable_ops) with constraint is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "If using Keras pass *_constraint arguments to layers.\n",
+      "Train on 975 samples\n",
+      "Epoch 1/5\n",
+      "975/975 [==============================] - 4s 4ms/sample - loss: 0.1282 - acc: 0.9631\n",
+      "Epoch 2/5\n",
+      "975/975 [==============================] - 4s 4ms/sample - loss: 0.0027 - acc: 1.0000\n",
+      "Epoch 3/5\n",
+      "975/975 [==============================] - 3s 4ms/sample - loss: 6.0815e-04 - acc: 1.0000\n",
+      "Epoch 4/5\n",
+      "975/975 [==============================] - 4s 4ms/sample - loss: 1.9617e-04 - acc: 1.0000\n",
+      "Epoch 5/5\n",
+      "975/975 [==============================] - 4s 4ms/sample - loss: 0.0086 - acc: 0.9949\n",
+      "325/325 [==============================] - 0s 383us/sample - loss: 8.7224e-07 - acc: 1.0000\n",
+      "[8.722367150845947e-07, 1.0]\n",
+      "[학습 완료]\n",
+      "학습 및 모델 생성이 완료되었습니다.\n"
+     ]
+    }
+   ],
    "source": [
     "dg.training_model()"
    ]
@@ -284,7 +319,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
