Keep showing plot until collecting next data

--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -30,9 +30,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running PyMODI (v0.9.1)\n",
+      "Newer PyMODI (v0.9.2) is available!\n"
+     ]
+    }
+   ],
    "source": [
     "from gathering_data import DataGathering\n",
     "import modi"
@@ -84,9 +93,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['right.csv', 'back.csv', 'go.csv', 'left.csv']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>파일 이름</th>\n",
+       "      <th>수집된 데이터 개수</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>right.csv</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>back.csv</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>go.csv</td>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>left.csv</td>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       파일 이름 수집된 데이터 개수\n",
+       "1  right.csv         16\n",
+       "2   back.csv         15\n",
+       "3     go.csv         17\n",
+       "4   left.csv         17"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "dg.check_data()"
    ]
@@ -114,17 +192,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Running PyMODI (v0.9.2)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from gesture_detection import DetectGesture"
    ]
@@ -138,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,36 +224,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[학습 시작]\n",
-      "학습을 시작합니다.\n",
-      "WARNING:tensorflow:From /home/pi/.local/lib/python3.7/site-packages/tensorflow_core/python/ops/resource_variable_ops.py:1630: calling BaseResourceVariable.__init__ (from tensorflow.python.ops.resource_variable_ops) with constraint is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "If using Keras pass *_constraint arguments to layers.\n",
-      "Train on 975 samples\n",
-      "Epoch 1/5\n",
-      "975/975 [==============================] - 4s 4ms/sample - loss: 0.1282 - acc: 0.9631\n",
-      "Epoch 2/5\n",
-      "975/975 [==============================] - 4s 4ms/sample - loss: 0.0027 - acc: 1.0000\n",
-      "Epoch 3/5\n",
-      "975/975 [==============================] - 3s 4ms/sample - loss: 6.0815e-04 - acc: 1.0000\n",
-      "Epoch 4/5\n",
-      "975/975 [==============================] - 4s 4ms/sample - loss: 1.9617e-04 - acc: 1.0000\n",
-      "Epoch 5/5\n",
-      "975/975 [==============================] - 4s 4ms/sample - loss: 0.0086 - acc: 0.9949\n",
-      "325/325 [==============================] - 0s 383us/sample - loss: 8.7224e-07 - acc: 1.0000\n",
-      "[8.722367150845947e-07, 1.0]\n",
-      "[학습 완료]\n",
-      "학습 및 모델 생성이 완료되었습니다.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "dg.training_model()"
    ]
@@ -319,7 +362,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
