--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -30,18 +30,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Running PyMODI (v0.9.1)\n",
-      "Newer PyMODI (v0.9.2) is available!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from gathering_data import DataGathering\n",
     "import modi"
@@ -56,9 +47,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Run Can Task.\n",
+      "Start initializing connected MODI modules\n",
+      "Motor (1771) has been connected!\n",
+      "Gyro (1742) has been connected!\n",
+      "Button (1431) has been connected!\n"
+     ]
+    }
+   ],
    "source": [
     "bundle = modi.MODI()\n",
     "gyro = bundle.gyros[0]\n",
@@ -93,78 +96,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['right.csv', 'back.csv', 'go.csv', 'left.csv']\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>파일 이름</th>\n",
-       "      <th>수집된 데이터 개수</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>right.csv</td>\n",
-       "      <td>16</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>back.csv</td>\n",
-       "      <td>15</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>go.csv</td>\n",
-       "      <td>17</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>left.csv</td>\n",
-       "      <td>17</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       파일 이름 수집된 데이터 개수\n",
-       "1  right.csv         16\n",
-       "2   back.csv         15\n",
-       "3     go.csv         17\n",
-       "4   left.csv         17"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "dg.check_data()"
    ]
@@ -254,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,11 +207,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "gyro = bundle.gyros[0]\n",
     "btn = bundle.buttons[0]\n",
     "mot = bundle.motors[0]\n",
@@ -295,7 +228,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "버튼을 더블클릭하면 출발합니다\n"
+     ]
+    }
+   ],
    "source": [
     "while True:\n",
     "        time.sleep(0.1)\n",
@@ -303,33 +244,44 @@
     "        clear_output(wait=True)\n",
     "        if btn.double_clicked:\n",
     "            print(\"출발!\")\n",
-    "            mot.speed = 35, -35\n",
+    "            mot.speed = 25, -25\n",
     "            time.sleep(0.1)\n",
     "            while True:\n",
     "                print(\"버튼을 눌러 데이터를 수집해보세요. 멈추려면 버튼을 더블클릭하세요.\", end='\\r')\n",
     "                if btn.clicked:\n",
+    "                    mot.speed = 0,0\n",
     "                    pred = dg.predict(gyro, btn) #pred 변수에, 예측값을 받아와 저장합니다.\n",
     "                    time.sleep(0.1)\n",
     "                    # 사용자 코드 영역\n",
     "                    # =======================================================\n",
     "                    if pred == 'back':\n",
-    "                        mot.speed = -30,30\n",
-    "                        time.sleep(0.1)\n",
+    "                        mot.speed = -25,25\n",
+    "                        time.sleep(3)\n",
+    "                        mot.speed = 0,0\n",
+    "                        time.sleep(1)\n",
     "                        print('car : back!')\n",
     "                    elif pred == 'go':\n",
-    "                        mot.speed = 30, -30\n",
-    "                        time.sleep(0.1)\n",
+    "                        mot.speed = 25, -25\n",
+    "                        time.sleep(3)\n",
+    "                        mot.speed = 0,0\n",
+    "                        time.sleep(1)\n",
     "                        print('car : go!')\n",
     "                    elif pred == 'left':\n",
-    "                        mot.speed = 30, 30\n",
-    "                        time.sleep(0.1)\n",
+    "                        mot.speed = 25, 25\n",
+    "                        time.sleep(3)\n",
+    "                        mot.speed = 0,0\n",
+    "                        time.sleep(1)\n",
     "                        print('car : left!')\n",
     "                    elif pred == 'right':\n",
-    "                        mot.speed = -30, -30\n",
-    "                        time.sleep(0.1)\n",
+    "                        mot.speed = -25, -25\n",
+    "                        time.sleep(3)\n",
+    "                        mot.speed = 0,0\n",
+    "                        time.sleep(1)\n",
+    "                        \n",
     "                        print('car : right!')\n",
     "                    #=======================================================\n",
     "\n",
+    "                mot.speed = 25,-25\n",
     "                time.sleep(0.1)\n",
     "                if btn.double_clicked:\n",
     "                    print(\"stop!\")\n",
@@ -362,7 +314,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
