Fix heading in ipynb

--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -141,7 +141,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2-3. training_model 메서드를 실행하여 수집한 데이터를 사용항여 학습하고, 모델을 생성합니다."
+    "2-3. training_model 함수를 실행하여 수집한 데이터를 사용하여 학습하고, 모델을 생성합니다."
    ]
   },
   {
