Modify contents code with pymodi 1.0.1 version

--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -11,6 +11,53 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<br /> <span style=\"font-family: Open Sans; color: red; font-weight: 800; font-size: 30px;\">사용 주의 사항</span>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 코드 실행 셀의 좌측에 있는 In[  ] 의 괄호 안에 * 가 표시된경우, 코드가 실행 중이라는 의미입니다.\n",
+    "### In[  ] 의 괄호 안에 숫자가 표시되기 전까지 기다려 주세요."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 0. MODI 준비하기"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 이번 컨텐츠에는 아래와 같은 모듈이 필요합니다.\n",
+    "\n",
+    "### 입력 모듈\n",
+    "Gyro, Button\n",
+    "### 출력 모듈\n",
+    "Motor\n",
+    "### 설정 모듈\n",
+    "Network, Battery"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 모듈 셋업\n",
+    "\n",
+    "AI 모듈에 모터 모듈을 MODI 커넥터로 연결해주세요. 그리고 버튼, 자이로, 네트워크, 배터리 모듈을 연결해주세요.\n",
+    "모터 모듈은 CAN 통신 기반의 유선 연결로 동작하고, \n",
+    "버튼, 자이로, 네트워크, 배터리 모듈은 블루투스 기반 무선 연결을 할 것입니다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# 1. 데이터 수집"
    ]
   },
@@ -18,7 +65,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 학습에 사용할 데이터를 수집합니다. 수집하고자 하는 데이터의 이름을 설정하고 gathering_motion 함수를 통해 데이터를 수집합니다."
+    "## 학습에 사용할 데이터를 수집합니다. 수집하고자 하는 데이터의 이름을 설정하고 gathering_motion 메서드를 통해 데이터를 수집합니다."
    ]
   },
   {
@@ -46,14 +93,44 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "블루투스 기반 무선 통신을 하는 MODI 객체를 생성합니다.\n",
+    "*Gyro, Button, Network, Battery가 필요합니다.*\n",
+    "\n",
+    "Network 모듈 후면에 적혀있는 8자리의 알파벳+숫자 조합의 시리얼 넘버를 확인해주세요."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "bundle = modi.MODI()\n",
-    "gyro = bundle.gyros[0]\n",
-    "btn = bundle.buttons[0]\n",
+    "# 네트워크 모듈의 uuid를 확인해주세요.\n",
+    "bundle_ble = modi.MODI(conn_mode=\"ble\", uuid=\" UUID를 확인하여 넣어주세요. 대소문자를 정확히 기입해주세요 \")\n",
+    "\n",
+    "gyro = bundle_ble.gyros[0]\n",
+    "btn = bundle_ble.buttons[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "CAN 기반 유선 통신을 하는 MODI 객체를 생성합니다. Motor를 연결합니다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bundle_can = modi.MODI()\n",
+    "\n",
+    "motor = bundle_can.motors[0]\n",
     "\n",
     "dg = DataGathering()"
    ]
@@ -62,7 +139,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1-3. go, back, left, right 4개 동작에 대한 데이터를 수집합니다. 파일 이름(go, back, left, right)을 입력하고, gathering_motion 함수를 실행하여 데이터를 수집합니다."
+    "1-3. go, back, left, right 4개 동작에 대한 데이터를 수집합니다. 파일 이름(go, back, left, right)을 입력하고, gathering_motion 메서드를 실행하여 데이터를 수집합니다."
    ]
   },
   {
@@ -141,7 +218,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2-3. training_model 함수를 실행하여 수집한 데이터를 사용하여 학습하고, 모델을 생성합니다."
+    "2-3. training_model 메서드를 실행하여 수집한 데이터를 사용항여 학습하고, 모델을 생성합니다."
    ]
   },
   {
@@ -176,9 +253,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running PyMODI (v1.0.1)\n"
+     ]
+    }
+   ],
    "source": [
     "from gesture_detection import DetectGesture\n",
     "from IPython.display import clear_output\n",
@@ -194,14 +279,45 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "블루투스 기반 무선 통신을 하는 MODI 객체를 생성합니다.\n",
+    "*Gyro, Button, Network, Battery가 필요합니다.*\n",
+    "\n",
+    "Network 모듈 후면에 적혀있는 8자리의 알파벳+숫자 조합의 시리얼 넘버를 확인해주세요."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "gyro = bundle.gyros[0]\n",
-    "btn = bundle.buttons[0]\n",
-    "mot = bundle.motors[0]\n",
+    "# 네트워크 모듈의 uuid를 확인해주세요.\n",
+    "bundle_ble = modi.MODI(conn_mode=\"ble\", uuid=\" UUID를 확인하여 넣어주세요. 대소문자를 정확히 기입해주세요 \")\n",
+    "\n",
+    "gyro = bundle_ble.gyros[0]\n",
+    "btn = bundle_ble.buttons[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "CAN 기반 유선 통신을 하는 MODI 객체를 생성합니다. Motor를 연결합니다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bundle_can = modi.MODI()\n",
+    "\n",
+    "motor = bundle_can.motors[0]\n",
+    "\n",
     "dg = DetectGesture()"
    ]
   },
@@ -209,14 +325,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3-3. 반복문 안에 있는 사용자 코드 영역을 수정하여 모터 모듈이 움직이도록 코드를 작성합니다."
+    "3-3. 반복문 안에 있는 사용자 코드 영역을 수정하여 모터 모듈이 움직이도록 코드를 움직이도록 코드를 작성합니다."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "버튼을 더블클릭하면 출발합니다\n"
+     ]
+    }
+   ],
    "source": [
     "while True:\n",
     "        time.sleep(0.1)\n",
@@ -224,44 +348,33 @@
     "        clear_output(wait=True)\n",
     "        if btn.double_clicked:\n",
     "            print(\"출발!\")\n",
-    "            mot.speed = 25, -25\n",
+    "            mot.speed = 35, -35\n",
     "            time.sleep(0.1)\n",
     "            while True:\n",
     "                print(\"버튼을 눌러 데이터를 수집해보세요. 멈추려면 버튼을 더블클릭하세요.\", end='\\r')\n",
     "                if btn.clicked:\n",
-    "                    mot.speed = 0,0\n",
     "                    pred = dg.predict(gyro, btn) #pred 변수에, 예측값을 받아와 저장합니다.\n",
     "                    time.sleep(0.1)\n",
     "                    # 사용자 코드 영역\n",
     "                    # =======================================================\n",
     "                    if pred == 'back':\n",
-    "                        mot.speed = -25,25\n",
-    "                        time.sleep(3)\n",
-    "                        mot.speed = 0,0\n",
-    "                        time.sleep(1)\n",
+    "                        mot.speed = -30,30\n",
+    "                        time.sleep(0.1)\n",
     "                        print('car : back!')\n",
     "                    elif pred == 'go':\n",
-    "                        mot.speed = 25, -25\n",
-    "                        time.sleep(3)\n",
-    "                        mot.speed = 0,0\n",
-    "                        time.sleep(1)\n",
+    "                        mot.speed = 30, -30\n",
+    "                        time.sleep(0.1)\n",
     "                        print('car : go!')\n",
     "                    elif pred == 'left':\n",
-    "                        mot.speed = 25, 25\n",
-    "                        time.sleep(3)\n",
-    "                        mot.speed = 0,0\n",
-    "                        time.sleep(1)\n",
+    "                        mot.speed = 30, 30\n",
+    "                        time.sleep(0.1)\n",
     "                        print('car : left!')\n",
     "                    elif pred == 'right':\n",
-    "                        mot.speed = -25, -25\n",
-    "                        time.sleep(3)\n",
-    "                        mot.speed = 0,0\n",
-    "                        time.sleep(1)\n",
-    "                        \n",
+    "                        mot.speed = -30, -30\n",
+    "                        time.sleep(0.1)\n",
     "                        print('car : right!')\n",
     "                    #=======================================================\n",
     "\n",
-    "                mot.speed = 25,-25\n",
     "                time.sleep(0.1)\n",
     "                if btn.double_clicked:\n",
     "                    print(\"stop!\")\n",
@@ -269,13 +382,6 @@
     "                    time.sleep(0.1)\n",
     "                    break"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
