--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -99,7 +99,14 @@
     "블루투스 기반 무선 통신을 하는 MODI 객체를 생성합니다.\n",
     "*Gyro, Button, Network, Battery가 필요합니다.*\n",
     "\n",
-    "Network 모듈 후면에 적혀있는 8자리의 알파벳+숫자 조합의 시리얼 넘버를 확인해주세요."
+    "Network 모듈 밑면에 적혀있는 8자리의 알파벳+숫자 조합의 시리얼 넘버(네트워크 모듈의 UUID)를 확인해주세요."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br /> <span style=\"font-family: Open Sans; color: red; font-weight: 800; font-size: 20px;\">네트워크 모듈의 uuid를 꼭 확인해주세요.</span>"
    ]
   },
   {
@@ -108,7 +115,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 네트워크 모듈의 uuid를 확인해주세요.\n",
+    "\n",
     "bundle_ble = modi.MODI(conn_mode=\"ble\", uuid=\" UUID를 확인하여 넣어주세요. 대소문자를 정확히 기입해주세요 \")\n",
     "\n",
     "gyro = bundle_ble.gyros[0]\n",
@@ -253,17 +260,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Running PyMODI (v1.0.1)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from gesture_detection import DetectGesture\n",
     "from IPython.display import clear_output\n",
@@ -285,7 +284,14 @@
     "블루투스 기반 무선 통신을 하는 MODI 객체를 생성합니다.\n",
     "*Gyro, Button, Network, Battery가 필요합니다.*\n",
     "\n",
-    "Network 모듈 후면에 적혀있는 8자리의 알파벳+숫자 조합의 시리얼 넘버를 확인해주세요."
+    "Network 모듈 후면에 적혀있는 8자리의 알파벳+숫자 조합의 시리얼 넘버(네트워크 모듈의 UUID)를 확인해주세요."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br /> <span style=\"font-family: Open Sans; color: red; font-weight: 800; font-size: 20px;\">네트워크 모듈의 uuid를 꼭 확인해주세요.</span>"
    ]
   },
   {
@@ -316,7 +322,7 @@
    "source": [
     "bundle_can = modi.MODI()\n",
     "\n",
-    "motor = bundle_can.motors[0]\n",
+    "mot = bundle_can.motors[0]\n",
     "\n",
     "dg = DetectGesture()"
    ]
@@ -332,15 +338,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "버튼을 더블클릭하면 출발합니다\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "while True:\n",
     "        time.sleep(0.1)\n",
@@ -400,7 +398,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
