Add guide restart jupyter kernel before step 3

--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -248,6 +248,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### * 3단계를 진행하기 전에 restart를 클릭한 후 kernel ready가 보였다가 사라질 때 까지 기다린 후 다음 코드를 실행하세요."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"img/restart.png\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 생성된 모델을 활용하여 콘텐츠를 제작합니다."
    ]
   },
@@ -398,7 +412,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
