--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -115,7 +115,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "bundle_ble = modi.MODI(conn_mode=\"ble\", uuid=\" UUID를 확인하여 넣어주세요. 대소문자를 정확히 기입해주세요 \")\n",
     "\n",
     "gyro = bundle_ble.gyros[0]\n",
@@ -366,6 +365,7 @@
     "                print(\"버튼을 눌러 데이터를 수집해보세요. 멈추려면 버튼을 더블클릭하세요.\", end='\\r')\n",
     "                if btn.clicked:\n",
     "                    pred = dg.predict(gyro, btn) #pred 변수에, 예측값을 받아와 저장합니다.\n",
+    "                    mot.speed = 0, 0\n",
     "                    time.sleep(0.1)\n",
     "                    # 사용자 코드 영역\n",
     "                    # =======================================================\n",
