Add comment to check th uuid of network module

--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -115,6 +115,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 네트워크 모듈의 uuid를 확인해주세요.\n",
     "bundle_ble = modi.MODI(conn_mode=\"ble\", uuid=\" UUID를 확인하여 넣어주세요. 대소문자를 정확히 기입해주세요 \")\n",
     "\n",
     "gyro = bundle_ble.gyros[0]\n",
